--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dev_dependencies:
   http_interceptor: ^0.4.1
   uuid: ^3.0.1
   flutter_bloc: ^7.0.0
+  localstorage: ^4.0.0+1
 
 
 # For information on the generic Dart part of this file, see the
