--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,15 +24,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
   sqflite: ^2.0.0+2
   path: ^1.8.0
   http: ^0.13.0
@@ -41,6 +32,16 @@ dev_dependencies:
   uuid: ^3.0.1
   flutter_bloc: ^7.0.0
   localstorage: ^4.0.0+1
+
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^1.0.2
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+  mockito: ^5.0.3
+
 
 
 # For information on the generic Dart part of this file, see the
